[package]
name = "bancho"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version ="1.11.0", features = ["full"] }
anyhow = "1.0.43"
async-trait = "0.1.51"
num_enum = "0.5.4"
reqwest = { version = "0.11.4", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
ctrlc = "3.2.0"
dotenv = "0.15.0"